# practise

./: README.md
2019-2025/: readme.txt
2019-2025/Gridbattle/: consolelog.txt
2019-2025/Gridbattle/src/: entities.c  init.c  input.h  player.h  stage.c  stage.h  structs.h
2019-2025/Voidfighter/: highscores.txt
2019-2025/Voidfighter/src/: background.c  background.h  common.h  highscores.c  highscores.h  hud.c  hud.h  init.h  input.h  stage.c  structs.h  text.c  text.h  util.c  util.h
2019-2025/anet-website/: tsconfig.json
2019-2025/anet-website/src/app/: decoration.tsx  dragboxes.tsx  layout.tsx  page.tsx
2019-2025/applications/: readme.txt
2019-2025/applications/jobsheet/: main.js  package.json  preload.js  renderer.js
2019-2025/asephriold-main/: 404.html
2019-2025/asephriold-main/assets/css/: animation.css
2019-2025/games/: readme.txt
2019-2025/games/Gridbattle/: CMakeLists.txt  EULA - READ ME.txt
2019-2025/games/Gridbattle/src/: common.h  defs.h  draw.c  draw.h  entities.h  init.h  input.c  main.c  main.h  player.c  util.c  util.h
2019-2025/games/Voidfighter/: CMakeLists.txt  CMakeSettings.json  README.md  consolelog.txt
2019-2025/games/Voidfighter/src/: defs.h  draw.c  draw.h  init.c  input.c  main.c  main.h  sound.c  sound.h  stage.h  title.c  title.h
2019-2025/jnet/: index.html  styles.css
2019-2025/jnet/gallery/: miso.html
2019-2025/jnet/home/: home.html
2019-2025/jnet/videogames/: gamedev.html
2019-2025/jobsheet/: index.html  package-lock.json
2019-2025/pythonwordcount/input/: 1.txt
2019-2025/wsites/anet-website/: package.json
2019-2025/wsites/anet-website/src/app/: globals.css  stars.css  waves.css
2019-2025/wsites/asephriold-main/: README.md  index.html
2019-2025/wsites/asephriold-main/assets/css/: generic.css
2019-2025/wsites/jnet/: new 1.txt
2019-2025/wsites/jnet/blog/: blog.html
2019-2025/wsites/jnet/contact/: contact.html
2019-2025/wsites/jnet/home/: home.html
learning/html/01/: index.html
learning/html/02/: index.html
learning/html/03/: index.html
learning/html/04/: index.html
